# clrs_study

./: Cargo.toml  flake.nix
benches/: matrices.rs  sorts.rs
src/: exercises.rs  lib.rs  sorts.rs  variance.rs
src/appendix/: c_probabilities.rs  mod.rs
src/divide_and_conquer/: matrix.rs  max_sum_subarray.rs  mod.rs
src/sorts/: insert.rs  merge.rs  mod.rs
