[package]
name = "clrs_study"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
criterion = "0.3.4"
once_cell = "1.8"
rand = "0.8"
itertools = "*"

[[bench]]
name = "sorts"
harness = false

[[bench]]
name = "matrices"
harness = false